tests/baselines/reference/tsxStatelessFunctionComponents3.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
file.tsx(15,37): error TS7008: Member 'children' implicitly has an 'any' type.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== file.tsx (1 errors) ====
    /// <reference path="/.lib/react.d.ts" />
    
    import React = require('react');
    
    const Foo = (props: any) => <div/>;
    // Should be OK
    const foo = <Foo />;
    
    
    // Should be OK
    var MainMenu: React.StatelessComponent<{}> = (props) => (<div>
        <h3>Main Menu</h3>
    </div>);
    
    var App: React.StatelessComponent<{ children }> = ({children}) => (
                                        ~~~~~~~~
!!! error TS7008: Member 'children' implicitly has an 'any' type.
        <div >
            <MainMenu/>
    	</div>
    );